# unrealgo

./: .gitattributes  .gitignore  CMakeLists.txt  CopyRight  README.md  backup.sh  commit.sh  fastcommit.sh
board/: CMakeLists.txt  GoBWArray.h  GoBWSet.h  GoBlackWhite.h  GoBoardColor.h  GoBoardConst.cpp  GoBoardConst.h  GoConnCompIterator.cpp  GoConnCompIterator.h  GoEBWArray.h  GoNbIterator.cpp  GoNbIterator.h  GoPoint.cpp  GoPoint.h  GoPointArray.h  GoPointIterator.h  GoPointSet.cpp  GoPointSet.h  GoPointSetUtil.cpp  GoPointSetUtil.h  GoRect.cpp  GoRect.h  SgUtil.cpp  SgUtil.h  SgWrite.cpp  SgWrite.h
cmake/Modules/: boost.cmake  protobuf.cmake  tensorflow.cmake
config/: BoardStaticConfig.h  dlcfg-19
engine/: CMakeLists.txt  Main.cpp  MainEngine.cpp  MainEngine.h  Version.cpp  Version.h
funcapproximator/: CMakeLists.txt  DataFormat.h  DlCheckPoint.cc  DlCheckPoint.h  DlConfig.cc  DlConfig.h  DlGraphUtil.cc  DlGraphUtil.h  DlPyRecordReader.cc  DlPyRecordWriter.cc  DlTFNetworkEvaluator.cc  DlTFNetworkEvaluator.h  DlTFRecordWriter.cc  DlTFRecordWriter.h  DlTensorUtil.cc  DlTensorUtil.h  DlTfStatusHelper.cc
funcapproximator/test/: CMakeLists.txt  DlGraphPrintBootstrap.cc  DlGraphPrintTest.cc  DlGraphPruneNodesReachableToTest.cc  DlGraphPruneNodesUnReachableToTest.cc  DlGraphPruneReachableFromTest.cc  DlGraphPruneTest.cc  DlGraphReversePruneTest.cc  DlGraphTest.cc  DlTFTest.cc  DlTFTestVariableBatchSize.cc  DlTFTestVariableBatchSize2.cc
go/: CMakeLists.txt  GoAssertBoardRestored.h  GoBensonSolver.cpp  GoBensonSolver.h  GoBlock.cpp  GoBlock.h  GoBoard.cpp  GoBoard.h  GoBoardHistory.cpp  GoBoardHistory.h  GoBoardRestorer.cpp  GoBoardRestorer.h  GoBoardSynchronizer.cpp  GoBoardSynchronizer.h  GoBoardUpdater.cpp  GoBoardUpdater.h  GoBoardUtil.cpp  GoBoardUtil.h  GoChain.cpp  GoChain.h  GoEvalArray.h  GoEyeCount.cpp  GoEyeCount.h  GoEyeUtil.cpp  GoEyeUtil.h  GoGame.cpp  GoGame.h  GoGtpCommandUtil.cpp  GoGtpCommandUtil.h  GoGtpEngine.cpp  GoGtpEngine.h  GoGtpExtraCommands.cpp  GoInfluence.cpp  GoInfluence.h  GoInit.cpp  GoInit.h  GoKomi.cpp  GoKomi.h  GoLadder.cpp  GoLadder.h  (+40 more)
go/test/: GoBoardSynchronizerTest.cpp  GoBoardTest.cpp  GoBoardTest2.cpp  GoBoardTestLiberties.cpp  GoBoardUpdaterTest.cpp  GoBoardUtilTest.cpp  GoEvalArrayTest.cpp  GoEyeUtilTest.cpp  GoGameTest.cpp  GoGtpCommandUtilTest.cpp  GoGtpEngineTest.cpp  GoInfluenceTest.cpp  GoKomiTest.cpp  GoOpeningKnowledgeTest.cpp  GoRegionBoardTest.cpp  GoRegionTest.cpp  GoSetupUtilTest.cpp  GoTimeControlTest.cpp  GoUtilTest.cpp
gouct/: CMakeLists.txt  GoUctBoard.cpp  GoUctBoard.h  GoUctCommands.cpp  GoUctCommands.h  GoUctDefaultMoveFilter.cpp  GoUctDefaultMoveFilter.h  GoUctEstimatorStat.cpp  GoUctEstimatorStat.h  GoUctGammaMoveGenerator.h  GoUctGlobalSearch.cpp  GoUctGlobalSearch.h  GoUctMoveFilter.cpp  GoUctMoveFilter.h  GoUctPlayer.cpp  GoUctPlayer.h  GoUctPlayoutPolicy.cpp  GoUctPlayoutPolicy.h  GoUctPlayoutUtil.h  GoUctPureRandomGenerator.h  GoUctSearch.cpp  GoUctSearch.h  GoUctSearchObject.cpp  GoUctSearchObject.h  GoUctUtil.cpp  GoUctUtil.h
gouct/test/: GoUctBoardTest.cpp  GoUctUtilTest.cpp
gtpengine/: CMakeLists.txt  GtpEngine.cpp  GtpEngine.h  GtpInputStream.cpp  GtpInputStream.h  GtpOutputStream.cpp  GtpOutputStream.h
gtpengine/test/: GtpEngineTest.cpp
lib/: Array.h  ArrayUtil.h  CMakeLists.txt  FileUtil.cc  FileUtil.h  Nums.h  SgArrayList.h  SgFastLog.cpp  SgFastLog.h  SgHash.h  SgHashTable.h  SgMath.h  SgRandom.cpp  SgRandom.h  SgSortedArray.h  SgSortedMoves.h  SgStack.h  SgUUID.cpp  SgUUID.h  SgVector.h  SgVectorUtil.cpp  SgVectorUtil.h  StringUtil.cc  StringUtil.h
lib/test/: CMakeLists.txt  libTest.cc
msg/: CMakeLists.txt  MinioStub.cc  MinioStub.h  ZmqUtil.cpp  ZmqUtil.h  command.proto
network/: AtomCurl.cc  AtomCurl.h  AtomHash.cc  AtomHash.h  AtomUNZIP.cc  AtomUNZIP.h  AtomZIP.cc  AtomZIP.h  CCZLib.cc  CCZLib.h  CMakeLists.txt  crypt.h  ioapi.c  ioapi.h  unzip.c  unzip.h  zip.c  zip.h
network/test/: AtomCurlTest.cc  CMakeLists.txt
platform/: CMakeLists.txt  SgDebug.cpp  SgDebug.h  SgException.cpp  SgException.h  SgPlatform.cpp  SgPlatform.h  SgProcess.cpp  SgProcess.h  SgRestorer.h  SgSystem.cpp  SgSystem.h  SgThreadedWorker.h  SgTime.cpp  SgTime.h  SgTimer.h
search/: Allocator.cpp  Allocator.h  CMakeLists.txt  MpiSynchronizer.cpp  MpiSynchronizer.h  SgABSearch.cpp  SgABSearch.h  SgAdditiveKnowledge.h  SgAutoUnitTest.h  SgDfpnSearch.cpp  SgDfpnSearch.h  SgEvaluatedMoves.cpp  SgEvaluatedMoves.h  SgGameReader.cpp  SgGameReader.h  SgGameWriter.cpp  SgGameWriter.h  SgGtpClient.cpp  SgGtpClient.h  SgGtpCommands.cpp  SgGtpCommands.h  SgGtpUtil.cpp  SgGtpUtil.h  SgIncrementalStack.cpp  SgIncrementalStack.h  SgInit.cpp  SgInit.h  SgMarker.h  SgMemCheck.cpp  SgMemCheck.h  SgMiaiMap.cpp  SgMiaiMap.h  SgMiaiStrategy.cpp  SgMiaiStrategy.h  SgNode.cpp  SgNode.h  SgNodeUtil.cpp  SgNodeUtil.h  SgProbCut.cpp  SgProbCut.h  (+36 more)
search/test/: SgArrayListTest.cpp  SgArrayTest.cpp  SgBWArrayTest.cpp  SgBWSetTest.cpp  SgBlackWhiteTest.cpp  SgBoardColorTest.cpp  SgBoardConstTest.cpp  SgConnCompIteratorTest.cpp  SgEBWArrayTest.cpp  SgEvaluatedMovesTest.cpp  SgFastLogTest.cpp  SgGameReaderTest.cpp  SgGtpUtilTest.cpp  SgHashTest.cpp  SgMarkerTest.cpp  SgMathTest.cpp  SgMiaiMapTest.cpp  SgMiaiStrategyTest.cpp  SgNbIteratorTest.cpp  SgNodeTest.cpp  SgNodeUtilTest.cpp  SgPointArrayTest.cpp  SgPointSetTest.cpp  SgPointTest.cpp  SgPropTest.cpp  SgRandomTest.cpp  SgRectTest.cpp  SgRestorerTest.cpp  SgSearchTest.cpp  SgSortedArrayTest.cpp  SgSortedMovesTest.cpp  SgStackTest.cpp  SgStatisticsTest.cpp  SgStringUtilTest.cpp  SgSystemTest.cpp  SgTimeControlTest.cpp  SgTimeSettingsTest.cpp  SgUtilTest.cpp  SgVectorTest.cpp  SgVectorUtilTest.cpp  (+5 more)
unittestmain/: CMakeLists.txt  UnitTestMain.cpp
